infocenter/src/App.css
/* ... */
/* CSS for staff display area */
.staff-info {
  font-size: 14px;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 30vh 1fr;
}

.staff-heading {
  grid: 1 / 1;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.staff-logo {
  display: flex;
  justify-content: center;
  align-items: center;
  aspect-ratio: 1 / 1;
  height: 100%;
  font-size: 35px;
}

.logo {
  border: 1px solid rgb(137, 44, 44);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: radial-gradient(rgb(246, 193, 194), rgb(217, 95, 97));
  aspect-ratio: 1 / 1;
  height: 20vh;
  width: 20vh;
  max-height: 200px;
  max-width: 200px;
}

.phone-image {
  height: 65%;
  width: 65%;
}

#blank-picture {
  background-color: var(--profile-pic-background-color);
  border-radius: 50%;
}

.staff-name {
  width: 65%;
  height: 100%;
  transform: translateY(4vh);
  color: white;
}

.name-update-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.name-text {
  font-size: 4vh;
  transform: translateY(-5px);
}

.position {
  width: 90%;
  font-weight: bold;
  transform: translateY(-30px);
  color: var(--grey-font);
  border-top: 2px solid var(--light-theme);
  padding-top: 1.6vh;
  font-size: 2vh;
}

/* --------------------- */
.info-container {
  grid-column: 1;
  grid-row: 2;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  overflow: hidden;
  font-size: 2vh;
  margin-bottom: 25px;
}

.info-entry-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.info-entry {
  width: 80%;
  height: 80%;
  display: grid;
  grid-template-rows: 40% 1fr;
}

.info-entry-header {
  grid: 1 / 1;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  background-color: var(--light-theme);
  margin: 0;
}

.info-entry-data {
  grid: 1/ 2;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--form-font-color);
  background-color: var(--info-container-background-color);
}

.email-link {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 4.17vh;
  width: 4.17vh;
  border-radius: 50%;
  background-color: yellow;
  transform: translate(30px, -7px);
}

.staff-name-desktop .email-link {
  transform: translate(30px, 4px);
}

/* link modal formatting */
.modal-container {
  position: absolute;
  top: calc(0.1944 * 100vh - 90px);
  left: calc(0.5703 * 100vw - 355px);
  min-width: 600px;
  max-height: 550px;
  z-index: 50;
  background-color: white;
  border: 1px solid black;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 65px 1fr;
  overflow-y: auto;
}

.modal-title-bar {
  font-size: 16px;
  width: 100%;
  grid-row: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--med-light-theme);
  color: white;
}

.model-title {
  transform: translateX(10px);
}

.cross {
  float: right;
  margin-right: 20px;
}

.cross:hover {
  cursor: pointer;
}

#title-aligner {
  width: 20px;
  height: 20px;
}

.modal-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: var(--form-background-color);
}

.contact-modal-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--form-background-color);
}

.contact-update-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--form-background-color);
}

.contact-update-department-container {
  width: 100%;
  height: 60px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 20px;
  color: white;
  font-size: 18px;
  font-weight: bold;
}

.contact-update-input-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}



.add-new-heading {
  color: var(--form-font-color);
}

.password-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--form-background-color);
  overflow-y: auto;
}

.password-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  min-height: 100px;
  width: 300px;
  border-radius: 10px;
  margin-bottom: 20px;
}

.password-container:first-of-type {
  margin-top: 20px;
}

.password-type {
  font-weight: 600; 
}

.password-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 13px;
}

.bolder {
  font-weight: 500;
}

/* Format the add new staff/equipment modal */
.add-new, .new-image, .update-device-file, .date-change {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 13px;
  color: var(--form-font-color);
  margin-top: 15px;
}

.update-device-file {
  margin-top: 0px;
}

.update-device-file-label {
  font-size: 15px;
  color: var(--form-font-color);
  font-weight: 500;
  margin-bottom: 14px;
}

.add-new-input, .new-image-input, .update-device-file-input, .date-change-input {
  font-size: 12px;
  color: var(--form-font-color);
  height: 20px;
  width: 180px;
  text-align: center;
  padding-right: 20px;
  padding-left: 10px;
  margin-top: 3px;
  transform: translateY(-4px);
  background-color: var(--form-input-color);
  border: none;
}

.update-device-file-input {
  padding: 5px 20px 5px 5px;
}

/* Formatting for the form labels and inputs. */
.add-new-input, .new-image-input {
  border: 1px solid var(--form-input-color);
  padding: 3px;
  width: 210px;
}
/* ... */

